update media query to fix incorrect center on card collapse

--- a/app-web/src/components/Cards/Cards.module.css
+++ b/app-web/src/components/Cards/Cards.module.css
@@ -24,7 +24,7 @@
     font-size: 28px;
 }
 
-@media screen and (min-width: 620px) {
+@media screen and (min-width: 570px) {
     .Cards {
         justify-content: flex-start;
     }
